@@ -117,6 +117,9 @@ public class Edge implements java.io.Serializable
         return from;
         }
 
+	public Object getInfo() { return info; }
+	public void setInfo(Object val) { info = val; }
+
     public String toString()
         {
         return "Edge[" + from + "->" + to + ": " + info + "]";
